@@ -20,8 +20,11 @@
  */
 package net.sf.rubycollect4j;
 
+import static net.sf.rubycollect4j.RubyCollections.rh;
+
 import java.util.Calendar;
 import java.util.Date;
+import java.util.Map;
 
 /**
  * 
@@ -34,12 +37,21 @@ public final class RubyDate extends Date {
   private static final long serialVersionUID = 6634492638579024503L;
 
   /**
+   * 
+   * {@link DateField} is designed for {@link RubyDate#change(Map)} to use.
+   *
+   */
+  public enum DateField {
+    YEAR, MONTH, DAY;
+  }
+
+  /**
    * Returns a {@link RubyDate} of now.
    */
   public RubyDate() {}
 
   /**
-   * Returns a {@link RubyDate} of given Date.
+   * Creates a {@link RubyDate} of given Date.
    * 
    * @param date
    *          a Date
@@ -51,6 +63,31 @@ public final class RubyDate extends Date {
       throw new NullPointerException();
 
     setTime(date.getTime());
+  }
+
+  /**
+   * Returns a new {@link RubyDate} where one or more of the elements have been
+   * changed according to the options parameter.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate change(Map<DateField, Integer> options) {
+    Calendar c = Calendar.getInstance();
+    c.setTime(this);
+    for (DateField field : options.keySet()) {
+      switch (field) {
+      case YEAR:
+        c.set(Calendar.YEAR, options.get(field));
+        break;
+      case MONTH:
+        c.set(Calendar.MONTH, options.get(field) - 1);
+        break;
+      default: // DAY
+        c.set(Calendar.DAY_OF_MONTH, options.get(field));
+        break;
+      }
+    }
+    return new RubyDate(c.getTime());
   }
 
   /**
@@ -103,6 +140,17 @@ public final class RubyDate extends Date {
     Calendar c = Calendar.getInstance();
     c.setTime(this);
     return c.get(Calendar.DAY_OF_WEEK) - 1;
+  }
+
+  /**
+   * Returns the day(1-31) of month of this {@link RubyDate}.
+   * 
+   * @return the day of month
+   */
+  public int dayOfMonth() {
+    Calendar c = Calendar.getInstance();
+    c.setTime(this);
+    return c.get(Calendar.DAY_OF_MONTH);
   }
 
   /**
@@ -254,17 +302,156 @@ public final class RubyDate extends Date {
   }
 
   /**
-   * Creates a {@link RubyDate} of today.
+   * Returns a new {@link RubyDate} with time set to the end of week based on
+   * this {@link RubyDate}. The end of week is Saturday.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate endOfWeek() {
+    return beginningOfWeek().add(6).days().endOfDay();
+  }
+
+  /**
+   * Returns a new {@link RubyDate} with time set to the beginning of month
+   * based on this {@link RubyDate}.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate beginningOfMonth() {
+    return change(rh(DateField.DAY, 1)).beginningOfDay();
+  }
+
+  /**
+   * Returns a new {@link RubyDate} with time set to the end of month based on
+   * this {@link RubyDate}.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate endOfMonth() {
+    Calendar c = Calendar.getInstance();
+    c.setTime(this);
+    c.set(Calendar.DAY_OF_MONTH,
+        Calendar.getInstance().getActualMaximum(Calendar.DAY_OF_MONTH));
+    c.set(Calendar.HOUR_OF_DAY, 23);
+    c.set(Calendar.MINUTE, 59);
+    c.set(Calendar.SECOND, 59);
+    c.set(Calendar.MILLISECOND, 999);
+    return new RubyDate(c.getTime());
+  }
+
+  /**
+   * Returns a new {@link RubyDate} representing the start of the quarter (1st
+   * of january, april, july, october).
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate beginningOfQuarter() {
+    switch (month()) {
+    case 1:
+    case 2:
+    case 3:
+      return change(rh(DateField.MONTH, 1, DateField.DAY, 1)).beginningOfDay();
+    case 4:
+    case 5:
+    case 6:
+      return change(rh(DateField.MONTH, 4, DateField.DAY, 1)).beginningOfDay();
+    case 7:
+    case 8:
+    case 9:
+      return change(rh(DateField.MONTH, 7, DateField.DAY, 1)).beginningOfDay();
+    default:
+      return change(rh(DateField.MONTH, 10, DateField.DAY, 1)).beginningOfDay();
+    }
+  }
+
+  /**
+   * Returns a new {@link RubyDate} representing the end of the quarter (last
+   * day of march, june, september, december).
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate endOfQuarter() {
+    switch (month()) {
+    case 1:
+    case 2:
+    case 3:
+      return change(rh(DateField.MONTH, 3, DateField.DAY, 31)).endOfDay();
+    case 4:
+    case 5:
+    case 6:
+      return change(rh(DateField.MONTH, 6, DateField.DAY, 30)).endOfDay();
+    case 7:
+    case 8:
+    case 9:
+      return change(rh(DateField.MONTH, 9, DateField.DAY, 30)).endOfDay();
+    default:
+      return change(rh(DateField.MONTH, 12, DateField.DAY, 31)).endOfDay();
+    }
+  }
+
+  /**
+   * Returns a new {@link RubyDate} representing the beginning of the year.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate beginningOfYear() {
+    return change(rh(DateField.MONTH, 1, DateField.DAY, 1)).beginningOfDay();
+  }
+
+  /**
+   * Returns a new {@link RubyDate} representing the end of the year.
+   * 
+   * @return new {@link RubyDate}
+   */
+  public RubyDate endOfYear() {
+    return change(rh(DateField.MONTH, 12, DateField.DAY, 31)).endOfDay();
+  }
+
+  /**
+   * Checks if this {@link RubyDate} represents a future time.
+   * 
+   * @return true if this {@link RubyDate} represents a future time, false
+   *         otherwise
+   */
+  public boolean futureʔ() {
+    return new RubyDate().compareTo(this) < 0;
+  }
+
+  /**
+   * Checks if this {@link RubyDate} represents a past time.
+   * 
+   * @return true if this {@link RubyDate} represents a past time, false
+   *         otherwise
+   */
+  public boolean pastʔ() {
+    return new RubyDate().compareTo(this) > 0;
+  }
+
+  /**
+   * Checks if this {@link RubyDate} is a time of today.
+   * 
+   * @return true if this {@link RubyDate} is a time of today, false otherwise
+   */
+  public boolean todayʔ() {
+    return RubyDate.today().equals(beginningOfDay());
+  }
+
+  /**
+   * Creates a {@link RubyDate} of now.
+   * 
+   * @return {@link RubyDate}
+   */
+  public static RubyDate now() {
+    return new RubyDate();
+  }
+
+  /**
+   * Creates a {@link RubyDate} of beginning of today.
    * 
    * @return {@link RubyDate}
    */
   public static RubyDate today() {
-    Calendar c = Calendar.getInstance();
-    c.set(Calendar.HOUR_OF_DAY, 0);
-    c.clear(Calendar.MINUTE);
-    c.clear(Calendar.SECOND);
-    c.clear(Calendar.MILLISECOND);
-    return new RubyDate(c.getTime());
+    return new RubyDate().beginningOfDay();
   }
 
   /**
